--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,98 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* Main app container - takes full viewport */
+.app-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* The scrollable page container */
+.page-wrap {
+  width: 98%;
+  height: 97%;
+  /* background: rgb(255, 218, 218); */
+  overflow-y: auto; /* Enable vertical scrolling */
+  overflow-x: hidden;
+
+  /* Hide scrollbar for Chrome, Safari, Edge */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Content inside the scrollable container */
+.content {
+  /* min-height: 200vh; Make it taller than container to enable scrolling */
+  padding: 0 5vh;
+  padding-top: 10vh;
+}
+
+.Home {
+  background: rgb(220, 242, 255);
+}
+
+.Project {
+  background: rgb(255, 219, 219);
+}
+
+.About {
+  background: rgb(210, 255, 239);
+}
+
+.Experience {
+  background: rgb(255, 239, 210);
+}
+
+.Technology {
+  display: flex;
+  align-items: center;
+  border-radius: 9999px; /* pill shape */
+  background-color: rgba(56, 178, 172, 0.319); /* bg-teal-400/10 */
+  padding: 0.25rem 1rem; /* py-1 px-3 */
+  font-size: 0.75rem; /* text-xs */
+  font-weight: 500; /* font-medium */
+  line-height: 1.25rem; /* leading-5 */
+  color: #262626; /* text-teal-300 */
+}
+
+.my-grid {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 5rem;
+  padding: 1em;
+
+  /* Invisible border initially */
+  border: 2px solid transparent;
+  transition: all 0.3s ease; /* smooth transition for border, background, transform */
+}
+
+.my-grid:hover {
+  border-color: rgba(109, 153, 178, 0.384);
+  background: rgb(184, 222, 244);
+}
+
+@media (min-width: 640px) {
+  .my-grid {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+    gap: 2rem;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-width: 768px) {
+  .my-grid {
+    gap: 1rem;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (min-width: 1024px) {
+  .my-grid:hover {
+    opacity: 1;
   }
-}
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  .group-list:hover .my-grid {
+    opacity: 0.5;
+  }
 }
